# yip

./: .gitmodules  CMakeLists.txt  README.md  README_I18N.md  README_LAYOUT.md  README_UI.md  config.cpp  config.h  main.cpp  test.cpp  xcode_build_configuration.cpp  xcode_build_configuration.h  xcode_build_file.cpp  xcode_build_file.h  xcode_build_phase.cpp  xcode_build_phase.h  xcode_configuration_list.h  xcode_container_item_proxy.cpp  xcode_container_item_proxy.h  xcode_file_reference.cpp  xcode_file_reference.h  xcode_group.cpp  xcode_group.h  xcode_native_target.cpp  xcode_native_target.h  xcode_object.cpp  xcode_object.h  xcode_project.cpp  xcode_project.h  xcode_project_build_configuration.cpp  xcode_project_build_configuration.h  xcode_target_build_configuration.cpp  xcode_target_build_configuration.h  xcode_target_dependency.h  xcode_unique_id.cpp  xcode_unique_id.h  xcode_variant_group.cpp  xcode_variant_group.h
project/: CMakeLists.txt  define.cpp  define.h  generate_android.cpp  generate_android.h  generate_tizen.cpp  generate_tizen.h  generate_xcode.cpp  generate_xcode.h  header_path.cpp  header_path.h  platform.cpp  platform.h  project.cpp  project.h  project_config.cpp  project_config.h  project_file.cpp  project_file.h  project_file_parser.cpp  project_file_parser.h  resource_compiler.cpp  resource_compiler.h  source_file.cpp  source_file.h  ui_compiler.cpp  ui_compiler.h  yip_directory.cpp  yip_directory.h
translation/: CMakeLists.txt  translation_file.cpp  translation_file.h
ui_compiler/: CMakeLists.txt  android_generator.cpp  android_generator.h  ios_generator.cpp  ios_generator.h  parse_util.cpp  parse_util.h  ui_alignment.cpp  ui_alignment.h  ui_button.cpp  ui_button.h  ui_color.cpp  ui_color.h  ui_compiler.cpp  ui_compiler.h  ui_group.cpp  ui_group.h  ui_image.cpp  ui_image.h  ui_label.cpp  ui_label.h  ui_layout.cpp  ui_layout.h  ui_scale_mode.cpp  ui_scale_mode.h  ui_widget.cpp  ui_widget.h
ui_compiler/attributes/: ui_alignment.cpp  ui_alignment.h  ui_color.cpp  ui_color.h  ui_font.cpp  ui_font.h  ui_image.cpp  ui_image.h  ui_scale_mode.cpp  ui_scale_mode.h  ui_text_alignment.cpp  ui_text_alignment.h
ui_compiler/widgets/: ui_button.cpp  ui_button.h  ui_group.cpp  ui_group.h  ui_image.cpp  ui_image.h  ui_image_view.cpp  ui_image_view.h  ui_label.cpp  ui_label.h  ui_scroll_view.cpp  ui_scroll_view.h  ui_spinner.cpp  ui_spinner.h  ui_switch.cpp  ui_switch.h  ui_table_view.cpp  ui_table_view.h  ui_text_area.cpp  ui_text_area.h  ui_text_field.cpp  ui_text_field.h  ui_webview.cpp  ui_webview.h  ui_widget.cpp  ui_widget.h  ui_widget_with_text.cpp  ui_widget_with_text.h
util/: CMakeLists.txt  cxx_escape.cpp  cxx_escape.h  file_type.cpp  file_type.h  fmt.h  git.cpp  git.h  image.cpp  image.h  java_escape.cpp  java_escape.h  json_escape.cpp  json_escape.h  path.cpp  path.h  sha1.cpp  sha1.h  shell.cpp  shell.h  sqlite.cpp  sqlite.h  xml.cpp  xml.h
xcode/: CMakeLists.txt  xcode_build_configuration.cpp  xcode_build_configuration.h  xcode_build_file.cpp  xcode_build_file.h  xcode_build_phase.cpp  xcode_build_phase.h  xcode_configuration_list.cpp  xcode_configuration_list.h  xcode_container_item_proxy.cpp  xcode_file_reference.cpp  xcode_file_reference.h  xcode_group.cpp  xcode_group.h  xcode_legacy_build_configuration.cpp  xcode_legacy_build_configuration.h  xcode_legacy_target.cpp  xcode_legacy_target.h  xcode_native_target.cpp  xcode_object.cpp  xcode_object.h  xcode_project.cpp  xcode_project.h  xcode_project_build_configuration.cpp  xcode_project_build_configuration.h  xcode_target_build_configuration.cpp  xcode_target_build_configuration.h  xcode_target_dependency.cpp  xcode_unique_id.cpp  xcode_unique_id.h  xcode_variant_group.h
